feat: sample CSS

--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,9 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color:seagreen;
-
+  background: url('./Components/Assets/background.jpg') no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 code {
